# unimap

./: .gitignore  Dockerfile  GEMINI.md  Makefile  pyproject.toml  viewer.html
src/unimap/: cli.py  config.py  server.py
src/unimap/download/: iiif.py
src/unimap/harvest/: base.py  iiif.py  models.py  rumsey.py  stanford.py
src/unimap/index/: sqlite_index.py
src/unimap/ocr/: base.py  models.py  paddle_spotter.py  patchify.py  spotter_v2.py
src/unimap/output/: annotation.py  geojson.py
